[package]
name = "async-graphql-float-mvce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.5", features = ["dynamic-schema"]}
async-graphql-axum = "5.0.5"
axum = "^0.6"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["arbitrary_precision"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
